<resources>
    <string name="app_name">Enter your name</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mobile">Enter your mobile no.</string>
    <string name="email">Enter your email</string>
    <string name="Java">Java</string>
    <string name="Android">Android</string>
    <string-array name="city_name">
        <item>Uttar pradesh</item>
        <item>Meerut</item>
        <item>Himachal pradesh</item>
        <item>Bihar</item>
    </string-array>
</resources>