<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registration"
        android:textStyle="bold"
        android:textSize="30dp"
        android:gravity="center"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/enterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_marginTop="@dimen/top_margin"
        android:hint="@string/app_name"
        />
    <EditText
        android:id="@+id/enterMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="10"
        android:singleLine="true"
        android:layout_marginTop="@dimen/top_margin"
        android:hint="@string/mobile"
        />
    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_marginTop="@dimen/top_margin"
        android:hint="@string/email"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Select Course"
        android:layout_marginTop="@dimen/top_margin"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/javaCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/Java"
            />
        <CheckBox
            android:id="@+id/androidCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Android"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Gender"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="30dp"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="Male"
        />
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Female"
        />

    </RadioGroup>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="City"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/city_name"
        />



    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:text="Submit"
        android:textStyle="bold"
        android:textColor="@color/white"/>


</LinearLayout>